// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repos component Repos snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="tags"
          role="listbox"
        >
          <span
            class="visually-hidden"
            id="sortLabel"
          >
            Sort projects by tag
          </span>
          <button
            aria-labelledby="sortLabel tag-vue"
            aria-selected="false"
            class="tag"
            id="tag-vue"
            role="option"
            type="button"
          >
            vue
          </button>
          <button
            aria-labelledby="sortLabel tag-typescript"
            aria-selected="false"
            class="tag"
            id="tag-typescript"
            role="option"
            type="button"
          >
            typescript
          </button>
          <button
            aria-labelledby="sortLabel tag-react"
            aria-selected="false"
            class="tag"
            id="tag-react"
            role="option"
            type="button"
          >
            react
          </button>
        </div>
        <ul
          class="projects"
        >
          <li
            class="project"
          >
            <h3
              class="title"
            >
              First
            </h3>
            <p
              class="description"
            >
              Lorem ipsum
            </p>
            <div
              class="bottom"
            >
              <a
                aria-label="Go to repository First"
                class="link inline-link"
                href="repo"
                rel="noreferrer"
                target="_blank"
              >
                Go to repository
              </a>
              <a
                aria-label="Live demo First"
                class="link link--live inline-link"
                href="demo"
                rel="noreferrer"
                target="_blank"
              >
                Live demo
              </a>
              <ul
                class="tags"
              >
                <li>
                  vue
                </li>
                <li>
                  typescript
                </li>
              </ul>
            </div>
          </li>
          <li
            class="project"
          >
            <h3
              class="title"
            >
              Second
            </h3>
            <p
              class="description"
            >
              Dolor sit
            </p>
            <div
              class="bottom"
            >
              <a
                aria-label="Go to repository Second"
                class="link inline-link"
                href="repo"
                rel="noreferrer"
                target="_blank"
              >
                Go to repository
              </a>
              <ul
                class="tags"
              >
                <li>
                  react
                </li>
              </ul>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="tags"
        role="listbox"
      >
        <span
          class="visually-hidden"
          id="sortLabel"
        >
          Sort projects by tag
        </span>
        <button
          aria-labelledby="sortLabel tag-vue"
          aria-selected="false"
          class="tag"
          id="tag-vue"
          role="option"
          type="button"
        >
          vue
        </button>
        <button
          aria-labelledby="sortLabel tag-typescript"
          aria-selected="false"
          class="tag"
          id="tag-typescript"
          role="option"
          type="button"
        >
          typescript
        </button>
        <button
          aria-labelledby="sortLabel tag-react"
          aria-selected="false"
          class="tag"
          id="tag-react"
          role="option"
          type="button"
        >
          react
        </button>
      </div>
      <ul
        class="projects"
      >
        <li
          class="project"
        >
          <h3
            class="title"
          >
            First
          </h3>
          <p
            class="description"
          >
            Lorem ipsum
          </p>
          <div
            class="bottom"
          >
            <a
              aria-label="Go to repository First"
              class="link inline-link"
              href="repo"
              rel="noreferrer"
              target="_blank"
            >
              Go to repository
            </a>
            <a
              aria-label="Live demo First"
              class="link link--live inline-link"
              href="demo"
              rel="noreferrer"
              target="_blank"
            >
              Live demo
            </a>
            <ul
              class="tags"
            >
              <li>
                vue
              </li>
              <li>
                typescript
              </li>
            </ul>
          </div>
        </li>
        <li
          class="project"
        >
          <h3
            class="title"
          >
            Second
          </h3>
          <p
            class="description"
          >
            Dolor sit
          </p>
          <div
            class="bottom"
          >
            <a
              aria-label="Go to repository Second"
              class="link inline-link"
              href="repo"
              rel="noreferrer"
              target="_blank"
            >
              Go to repository
            </a>
            <ul
              class="tags"
            >
              <li>
                react
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Repos component Repos snapshot without data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <p
          class="empty"
        >
          Projects not found
        </p>
        <p
          class="emptySubtitle"
        >
          Perhaps you should check for github?
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <p
        class="empty"
      >
        Projects not found
      </p>
      <p
        class="emptySubtitle"
      >
        Perhaps you should check for github?
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
